# RollCall

./: .env.example  .gitignore  DEPLOYMENT.md  Example Roster Template.xlsx  Home.py  Makefile  README.md  eed_demo_admin.py  out  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rollcall  run.sh  scheduler.py
.claude/: settings.local.json
.streamlit/: config.toml
auth/: users.json
config/: settings.py
pages/: 0_Login.py  10_Commander_Attendance.py  11_At_Risk_Cadets.py  11_Event_Code_Admin.py  12_Audit_Log.py  13_Email_Templates.py  1_Dashboard.py  2_Attendance_Submission.py  3_Cadets.py  4_Flight_Management.py  5_Waivers.py  6_Event_Management_CRUD.py  6_Event_Schedule_Config.py  6_Waiver_Review.py  7_Flight_Commander_Live_View.py  8_Cadet_Attendance.py  8_User_Management.py  9_Account_Settings.py  Credits.py  flight_management.py
scripts/: demo_admin.py  emails.py  seed_data_demo.py  seed_users.py  seed_waiver_approvals.py
services/: account_settings.py  admin_users.py  at_risk_cadets.py  attendance.py  attendance_merge.py  attendance_modifications.py  audit_log_viewer.py  cadet_attendance.py  cadets.py  commander_attendance.py  dashboard.py  email_templates.py  event_code_display.py  event_codes.py  event_config.py  events.py  flight_management.py  waiver_review.py  waivers.py
tests/: conftest.py  test_account_settings.py  test_admin_users_view.py  test_at_risk_cadets.py  test_at_risk_email.py  test_attendance_checkin.py  test_attendance_merge.py  test_attendance_modifications.py  test_attendance_status.py  test_attendance_submission.py  (+31 more)
(+29 files in other folders)
