[project]
name = "rollcall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "selenium>=4.43.0",
    "streamlit>=1.56.0",
    "streamlit-authenticator>=0.4.2",
]
