[project]
name = "rollcall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "python-dotenv>=1.2.2",
    "selenium>=4.43.0",
    "streamlit>=1.56.0",
    "streamlit-authenticator>=0.4.2",
    "pymongo>=4.16.0",
    "apscheduler>=3.11.2",
    "streamlit-folium>=0.26.0",
    "streamlit-js-eval>=1.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "selenium>=4.43.0",
    "ty>=0.0.32",
]
